all tags and spacing fixes

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -23,10 +23,10 @@ $table-text-align: left !default;
 $site-title-color: #e6e6e6 !default;
 
 // Width of the content area
-$content-width:    800px !default;
+$content-width:    900px !default;
 
 $on-palm:          600px !default;
-$on-laptop:        800px !default;
+$on-laptop:        900px !default;
 
 // Use media queries like this:
 // @include media-query($on-palm) {
