--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -171,6 +171,20 @@
 }
 
 
+/**
+ *  Page columns not working
+ */
+/*.col-container {
+  display: flex;
+}
+
+.col-1 {
+  flex: 30%;
+}
+
+.col-2 {
+  flex: 70%;
+}*/
 
 /**
  * Page content
